synth_yaml/frpc_daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: frpc
  name: frpc-daemonset
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: frpc
  template:
    metadata:
      labels:
        app: frpc
    spec:
      containers:
      - command:
        - /entrypoint.sh
        image: snowdreamtech/frpc:v0.58.0
        name: frpc
        volumeMounts:
        - mountPath: /etc/frpc/frpc.json
          name: config-volume
          subPath: frpc.json
      hostNetwork: true
      volumes:
      - configMap:
          name: frpc-config
        name: config-volume
  updateStrategy:
    type: RollingUpdate
